# cpp-static-analyzer

./: .gitignore  CMakeLists.txt  README.md
api-doc/: _analysis_8h_source.html  _analysis_config_8h_source.html  _analysis_driver_8h_source.html  _analysis_result_8h_source.html  _c_f_g_8h_source.html  _c_p_p_method_8h_source.html  _copyable_8h_source.html  _dataflow_analysis_8h_source.html  _dataflow_result_8h_source.html  _i_r_8h_source.html  _logger_8h_source.html  _map_fact_8h_source.html  _node_result_8h_source.html  _reaching_definition_8h_source.html  _set_fact_8h_source.html  _solver_8h_source.html  _stmt_8h_source.html  _type_8h_source.html  _var_8h_source.html  _world_8h_source.html  annotated.html  classanalyzer_1_1_world-members.html  classanalyzer_1_1_world.html  classanalyzer_1_1_world__inherit__graph.map  classanalyzer_1_1_world__inherit__graph.md5  classanalyzer_1_1_world_builder-members.html  classanalyzer_1_1_world_builder.html  classanalyzer_1_1_world_builder__inherit__graph.map  classanalyzer_1_1_world_builder__inherit__graph.md5  classanalyzer_1_1analysis_1_1_analysis-members.html  classanalyzer_1_1analysis_1_1_analysis.html  classanalyzer_1_1analysis_1_1_analysis__inherit__graph.map  classanalyzer_1_1analysis_1_1_analysis__inherit__graph.md5  classanalyzer_1_1analysis_1_1_method_analysis-members.html  classanalyzer_1_1analysis_1_1_method_analysis.html  classanalyzer_1_1analysis_1_1_method_analysis__coll__graph.map  classanalyzer_1_1analysis_1_1_method_analysis__coll__graph.md5  classanalyzer_1_1analysis_1_1_method_analysis__inherit__graph.map  classanalyzer_1_1analysis_1_1_method_analysis__inherit__graph.md5  classanalyzer_1_1analysis_1_1_stmt_result-members.html  (+272 more)
api-doc/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  functions_0.js  functions_10.js  functions_11.js  functions_12.js  (+16 more)
docs/: CMakeLists.txt  CONTRIBUTING.md  DataflowAnalysis.md  ProgramRepresentation.md
include/: World.h
include/analysis/: Analysis.h  AnalysisResult.h
include/analysis/dataflow/: AnalysisDriver.h  ConstantPropagation.h  DataflowAnalysis.h  LiveVariable.h  ReachingDefinition.h
include/analysis/dataflow/analysis/: DataflowAnalysis.h  ReachingDefinition.h
include/analysis/dataflow/fact/: DataflowResult.h  MapFact.h  NodeResult.h  SetFact.h
include/analysis/dataflow/solver/: Solver.h
include/analysis/graph/: CFG.h
include/config/: AnalysisConfig.h
include/ir/: CPPMethod.h  Exp.h  IR.h  Stmt.h  Var.h
include/language/: CPPMethod.h  Type.h
include/util/: Copyable.h  Graph.h  Logger.h
lib/: CMakeLists.txt  World.cpp
lib/analysis/: Analysis.cpp
lib/analysis/dataflow/: ConstantPropagation.cpp  LiveVariable.cpp  ReachingDefinition.cpp
lib/analysis/graph/: DefaultCFG.cpp
lib/config/: DefaultAnalysisConfig.cpp
lib/ir/: CPPMethod.cpp  ClangStmtWrapper.cpp  ClangVarWrapper.cpp  DefaultIR.cpp  DefaultIRBuilder.cpp  DefaultStmtBuilder.cpp  DefaultVarBuilder.cpp  IR.cpp  NopStmt.cpp
lib/ir/exp/: Var.cpp
lib/language/: CPPMethod.cpp  DefaultTypeBuilder.cpp  Type.cpp
lib/util/: Logger.cpp
resources/dataflow/ConstPropagation/: ConstPropagationTest.cpp
resources/dataflow/LiveVar/: LiveVarTest.cpp
resources/dataflow/ReachDef/: ReachDefTest.cpp
resources/example01/include/: factor.h  fib.h
resources/example01/src/: main.cpp
resources/example01/src/factor/: factor.cpp
resources/example01/src/fib/: fib.cpp
resources/example02/: dump.sh  foo.h  main.cpp
resources/example02/src/: main.cpp
tests/: CMakeLists.txt  TestCPPMethod.cpp  TestConstantPropagation.cpp  TestDataflowFacts.cpp  TestIR.cpp  TestLiveVariable.cpp  TestReachingDefinition.cpp  TestWorld.cpp  doctest.h  main.cpp
tools/: CMakeLists.txt  constant-propagation-analyzer.cpp  live-variable-analyzer.cpp  reaching-definition-analyzer.cpp
tools/analyzer/: CMakeLists.txt  main.cpp
tools/reaching-definition-analyzer/: CMakeLists.txt  main.cpp
