add_library(libanalyzer
        World.cpp
        util/Logger.cpp
        ir/DefaultIR.cpp
        ir/DefaultIRBuilder.cpp
        ir/ClangVarWrapper.cpp
        ir/ClangStmtWrapper.cpp
        ir/DefaultStmtBuilder.cpp
        ir/DefaultVarBuilder.cpp
        ir/NopStmt.cpp
        language/CPPMethod.cpp
        language/Type.cpp
        language/DefaultTypeBuilder.cpp
        analysis/graph/DefaultCFG.cpp
        config/DefaultAnalysisConfig.cpp
        analysis/dataflow/ReachingDefinition.cpp
        analysis/Analysis.cpp)

target_link_libraries(libanalyzer
        ${LLVM_LIBS}
        ${CLANG_LIBS}
        )
